[package]
name = "bevy_hou"
version = "0.1.0"
edition = "2024"
description = "Houdini ↔ Bevy integration plugin"
license = "MIT"
repository = "https://github.com/birdpersonxo/bevy_hou"
homepage = "https://github.com/birdpersonxo/bevy_hou"
readme = "README.md"
keywords = ["bevy", "gltf", "houdini", "assets", "platformer", "usd"]
categories = ["game-engines", "graphics", "development-tools"]
authors = ["Deepak Rajan <birdperson.me@gmail.com>"]

[dependencies]
bevy = { version = "0.17.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
